--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,14 @@
-version: "2"
+version: "3"
 services:
   playtopia-dev:
     build: 
       context: ./
       dockerfile: Dockerfile
     container_name: c-playtopia-dev
+    networks:
+      - default
+      - bridge-network
     ports:
       - "80:8000"
-      # - "9000:9000"
-    network_mode: "host"
+      # - "9000:9000"    
     
